--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,19 @@
+name: CI
 
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  build-and-push:
+    runner:
+      name: "Build and Push"
+      runs-on: ubuntu-latest
+
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v4
+
+        - name: Build docker image
+          uses: docker build -t thauam09/nlw-journey-api-devops: .
