--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,6 @@ jobs:
     - name: Generate artifact attestation
       uses: actions/attest-build-provenance@v1
       with:
-        subject-name: thauam09/nlw-journey-api-devops:latest
+        subject-name: thauam09/nlw-journey-api-devops
         subject-digest: ${{ steps.push.outputs.digest }}
         push-to-registry: true
