--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,15 +25,15 @@ jobs:
         SHA=$(echo $GITHUB_SHA | head -c7)
         echo "sha=$SHA" >> $GITHUB_OUTPUT
 
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUHB_TOKEN }}
+
     - name: Build docker image
       run: docker build -t thauam09/nlw-journey-api-devops:${{ steps.generate_sha.outputs.sha }} .
 
-
-    # - name: Log in to Docker Hub
-    #   uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
-    #   with:
-    #     username: ${{ secrets.DOCKER_USERNAME }}
-    #     password: ${{ secrets.DOCKER_PASSWORD }}
 
     # - name: Extract metadata (tags, labels) for Docker
     #   id: meta
