--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,19 +34,8 @@ jobs:
     - name: Build docker image
       run: docker build -t thauam09/nlw-journey-api-devops:${{ steps.generate_sha.outputs.sha }} .
 
-
-    # - name: Extract metadata (tags, labels) for Docker
-    #   id: meta
-    #   uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
-    #   with:
-    #     images: thauam09/nlw-journey-api-devops
-
-    # - name: Build and push Docker image
-    #   id: push
-    #   uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
-    #   with:
-    #     context: .
-    #     file: ./Dockerfile
-    #     push: true
-    #     tags: ${{ steps.meta.outputs.tags }}
-    #     labels: ${{ steps.meta.outputs.labels }}
+    - name: Push image
+      run: |
+        docker push thauam09/nlw-journey-api-devops:${{ steps.generate_sha.outputs.sha }}
+        docker tag thauam09/nlw-journey-api-devops:${{ steps.generate_sha.outputs.sha }} thauam09/nlw-journey-api-devops:latest
+        docker push thauam09/nlw-journey-api-devops:latest
