new: add step build and push to Dockerhub

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,11 +31,12 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build docker image
-      run: docker build -t thauam09/nlw-journey-api-devops:${{ steps.generate_sha.outputs.sha }} .
-
-    - name: Push image
-      run: |
-        docker push thauam09/nlw-journey-api-devops:${{ steps.generate_sha.outputs.sha }}
-        docker tag thauam09/nlw-journey-api-devops:${{ steps.generate_sha.outputs.sha }} thauam09/nlw-journey-api-devops:latest
-        docker push thauam09/nlw-journey-api-devops:latest
+    - name: Build and push Docker image
+      id: push
+      uses: docker/build-push-action@v6
+      with:
+        context: .
+        push: true
+        tags: |
+          thauam09/nlw-journey-api-devops:${{ steps.generate_sha.outputs.sha }}
+          thauam09/nlw-journey-api-devops:latest
