--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,15 +9,18 @@ jobs:
   build-and-push:
     name: "Build and Push"
     runs-on: ubuntu-latest
-    permissions:
-      packages: write
-      contents: read
-      attestations: write
-      id-token: write
 
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+
+    - name: Setup Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: '1.22.x'
+
+    - name: Run tests
+      run: go test
 
     - name: Generate SHA
       id: generate_sha
